WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57039
Dismissed reversion suggestion is incorrectly learned.
https://bugs.webkit.org/show_bug.cgi?id=57039
Summary
Dismissed reversion suggestion is incorrectly learned.
Jia Pu
Reported
2011-03-24 11:13:17 PDT
On the version of Mac OS X that supports correction panel, dismissing reversion suggestion multiple time causes the misspelled word to be learned. <
rdar://problem/9179214
>
Attachments
Patch (v1)
(3.61 KB, patch)
2011-03-24 11:34 PDT
,
Jia Pu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jia Pu
Comment 1
2011-03-24 11:34:01 PDT
Created
attachment 86804
[details]
Patch (v1)
WebKit Commit Bot
Comment 2
2011-03-24 14:14:41 PDT
Comment on
attachment 86804
[details]
Patch (v1) Clearing flags on attachment: 86804 Committed
r81896
: <
http://trac.webkit.org/changeset/81896
>
WebKit Commit Bot
Comment 3
2011-03-24 14:14:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug