2011-03-24  Jia Pu  <jpu@apple.com>

Reviewed by Darin Adler.

        Dismissed reversion suggestion is incorrectly learned.
        https://bugs.webkit.org/show_bug.cgi?id=57039

        CorrectionPanel should always use [NSSpellChecker dismissCorrectionBubbleForView].
        [NSSpellChecker cancelCorrectionBubbleForView] is reserved for situation where correction panel
        is dismissed explicitly by ESC key or clicking the dimiss button. Misusing these causes
        incorrect automatic learning.

        * WebCoreSupport/CorrectionPanel.mm:
        (CorrectionPanel::dismissInternal):
2011-03-24  Jia Pu  <jpu@apple.com>

        Reviewed by Darin Adler.

        Dismissed reversion suggestion is incorrectly learned.
        https://bugs.webkit.org/show_bug.cgi?id=57039

        CorrectionPanel should always use [NSSpellChecker dismissCorrectionBubbleForView].
        [NSSpellChecker cancelCorrectionBubbleForView] is reserved for situation where correction panel
        is dismissed explicitly by ESC key or clicking the dimiss button. Misusing these causes
        incorrect automatic learning.

        * UIProcess/mac/CorrectionPanel.mm:
        (WebKit::CorrectionPanel::dismissInternal):

Canonical link: https://commits.webkit.org/71706@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81896 268f45cc-cd09-0410-ab3c-d52691b4dbfc